--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroui/accordion": "^2.2.24",
+    "@heroui/skeleton": "^2.2.17",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.80.0",
     "clsx": "^2.1.1",
     "next": "16.0.1",
     "react": "19.2.0",
